--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "npm run build && gh-pages -d dist",
+    "deploy": "gh-pages -d dist",
     "start": "vite preview",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
-  }, 
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
